force-app/main/default/objects/LOA_to_Advice__c/LOA_to_Advice__c.object-meta.xml
<CustomObject>
    <label>LOA to Advice</label>
    <nameField>
        <displayFormat>LTA-{00000}</displayFormat>
        <label>LOA to Advice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOA to Advice</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>