force-app/main/default/objects/LOA_to_Advice__c/fields/LOA__c.field-meta.xml
<CustomField>
    <fullName>LOA__c</fullName>
    <label>LOA</label>
    <referenceTo>LOA__c</referenceTo>
    <relationshipLabel>Associated Advice</relationshipLabel>
    <relationshipName>LOA_to_Advice</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>