force-app/main/default/objects/LOA_to_Advice__c/fields/LOA_Status__c.field-meta.xml
<CustomField>
    <fullName>LOA_Status__c</fullName>
    <formula>TEXT(LOA__r.MainLOAStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOA Status</label>
    <type>Text</type>
</CustomField>