force-app/main/default/objects/LOA_to_Advice__c/fields/OW_unique_check__c.field-meta.xml
<CustomField>
    <fullName>OW_unique_check__c</fullName>
    <description>This field is updated in a before save flow and is a concatenation of the advice and LOA IDs. This field is unique, ensuring that we never link an LOA to an advice record more than once.</description>
    <label>Unique check</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>